Fixed errors with uneven entries in fizzbuzz generator and word replacer modified footer and header sizes to be more uniform across screen sizes updated About Me to have more accurate information and make the resume link more apparent

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -21,7 +21,7 @@ footer a:hover {
   justify-content: space-around;
   background-color: black;
   height: 100%;
-  min-height: 85vh;
+  min-height: 90vh; /*85vh;*/
 }
 
 .footer-nav {
@@ -35,6 +35,7 @@ footer a:hover {
   .footer {
     height: auto;
     min-height: 0%;
+    height: 75px;
   }
   .footer-nav {
     width: 100%;
