--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -10,7 +10,7 @@ header {
   justify-content: space-between;
   align-items: center;
   display: flex;
-  height: 15vh;
+  height: 11vh;
 }
 
 
@@ -23,6 +23,7 @@ header {
 @media screen and (max-width: 803px) {
   .main-header {
     flex-direction: column;
+    height: 10vh;
   }
   .main-header h1:first-child{
     display: none;
@@ -30,4 +31,7 @@ header {
   h1 {
     padding: 0;
   }
+  /* .main-header {
+    min-height: 15vh;
+  } */
 }
